# cursus-e1_model

./: .gitignore  image_instance_segmentation.py  model_export.ipynb  model_training.ipynb  onnx_runtime_testing.ipynb  pyproject.toml  test.json
cursus-e1_model/ATLDSD/: args.yaml  results.csv
cursus-e1_model/ATLDSD2/: args.yaml  results.csv
cursus-e1_model/ATLDSD3/: args.yaml  results.csv
cursus-e1_model/ATLDSD4/: args.yaml  results.csv
cursus-e1_model/ATLDSD5/: args.yaml  results.csv
runs/segment/val/: predictions.json
