[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["t-vernet"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.0"
scikit-image = "^0.19.3"
shapely = "^2.0.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
ultralytics = "^8.0.54"
opencv-python = "^4.7.0.72"
pillow = "^9.4.0"
pyyaml = "^6.0"
requests = "^2.28.2"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
